Alterado arquivo de build.

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -8,13 +8,13 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav me-auto">
       <li class="nav-item">
-        <a class="nav-link" routerLink="/processos">Processos</a>
+        <a class="nav-link" [routerLink]="['/process/index']">Processos</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/andamento-processual">Andamento Processual</a>
+        <a class="nav-link" [routerLink]="['/procedural_progress/index']">Andamento Processual</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/partes-envolvidas">Partes Envolvidas</a>
+        <a class="nav-link" [routerLink]="['/parties_involved/index']">Partes Envolvidas</a>
       </li>
     </ul>
 
