--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,25 +1,54 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark-purple px-3">
-  <a class="navbar-brand fw-bold" href="#">Sistema Jurídico</a>
+<header class="navbar navbar-expand-lg bg-dark-purple shadow px-4">
+  <div class="d-flex align-items-center gap-4">
+    <a class="navbar-brand" [routerLink]="['/home']">
+      <img src="/assets/images/logo_menor.png" alt="Logo" height="50" />
+    </a>
 
-  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav me-auto">
-      <li class="nav-item">
-        <a class="nav-link" [routerLink]="['/process/index']">Processos</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" [routerLink]="['/procedural_progress/index']">Andamento Processual</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" [routerLink]="['/parties_involved/index']">Partes Envolvidas</a>
-      </li>
-    </ul>
-
-    <button class="btn btn-purple" (click)="logout()" title="Sair">
-      <i class="bi bi-box-arrow-right"></i>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#mainNavbar"
+      aria-controls="mainNavbar"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
     </button>
   </div>
-</nav>
+
+  <div
+    class="collapse navbar-collapse flex-grow-1 justify-content-center gap-4"
+    id="mainNavbar"
+  >
+    <a
+      class="nav-link text-light fw-medium"
+      [routerLink]="['/process/index']"
+      >
+      <i class="bi bi-folder2-open me-1"></i> Processos
+    </a>
+    <a
+      class="nav-link text-light fw-medium"
+      [routerLink]="['/procedural_progress/index']"
+      >
+      <i class="bi bi-clock-history me-1"></i> Andamento Processual
+    </a>
+    <a
+      class="nav-link text-light fw-medium"
+      [routerLink]="['/parties_involved/index']"
+      >
+      <i class="bi bi-people me-1"></i> Partes Envolvidas
+    </a>
+  </div>
+
+  <div>
+    <a
+      class="nav-link text-danger fw-medium"
+      role="button"
+      (click)="logout()"
+      title="Sair"
+    >
+      <i class="bi bi-box-arrow-right me-1"></i> Sair
+    </a>
+  </div>
+</header>
