Implementação básica das funcionalidades.

--- a/src/app/features/parties-involved/pages/show-parties-involed/show-parties-involed.component.html
+++ b/src/app/features/parties-involved/pages/show-parties-involed/show-parties-involed.component.html
@@ -1,1 +1,37 @@
-<p>show-parties-involed works!</p>
+<app-header></app-header>
+
+<div class="container my-5" *ngIf="parte">
+  <h2 class="mb-4 text-secondary-custom">
+    Detalhes da Parte Envolvida {{ parte.id }}
+  </h2>
+
+  <p><strong>Nome:</strong> {{ parte.nomeCompleto }}</p>
+  <p><strong>Tipo Parte Envolvida:</strong> {{ parte.tipoParteEnvolvida }}</p>
+  <p><strong>Email:</strong> {{ parte.email }}</p>
+  <p><strong>Telefone:</strong> {{ parte.telefone }}</p>
+  <p><strong>Tipo Documento:</strong> {{ parte.documento?.tipoDocumento }}</p>
+  <p><strong>Documento:</strong> {{ parte.documento?.valor }}</p>
+
+  <div class="d-flex gap-3 mt-4">
+    <button
+      class="btn px-4 py-2"
+      style="background-color: #2b0033; color: white;"
+      [routerLink]="['/parties_involved/edit', parte.id]">
+      Editar
+    </button>
+
+    <button
+      class="btn btn-danger px-4 py-2"
+      (click)="onDelete()">
+     Excluir
+    </button>
+
+     <button
+      class="btn btn-outline-secondary px-4 py-2"
+      (click)="goBack()">
+      Voltar
+    </button>
+
+    <app-confirm-modal (confirmed)="onConfirmed($event)"></app-confirm-modal>
+  </div>
+</div>
