--- a/src/app/features/procedural-progress/pages/show-procedural-progress/show-procedural-progress.component.html
+++ b/src/app/features/procedural-progress/pages/show-procedural-progress/show-procedural-progress.component.html
@@ -1,3 +1,34 @@
 <app-header></app-header>
 
-<p>show-procedural-progress works!</p>
+<div class="container my-5" *ngIf="andamento">
+  <h2 class="mb-4 text-secondary-custom">
+    Detalhes do Andamento Processual {{ andamento.id }}
+  </h2>
+
+  <p><strong>Tipo:</strong> {{ andamento.tipoAndamentoProcessual }}</p>
+  <p><strong>Data de Registro:</strong> {{ andamento.dataRegistro }}</p>
+  <p><strong>Descrição:</strong> {{ andamento.descricao }}</p>
+
+  <div class="d-flex gap-3 mt-4">
+    <button
+      class="btn px-4 py-2"
+      style="background-color: #2b0033; color: white;"
+      [routerLink]="['/procedural_progress/edit', andamento.id]">
+      Editar
+    </button>
+
+    <button
+      class="btn btn-danger px-4 py-2"
+      (click)="onDelete()">
+      Excluir
+    </button>
+
+    <button
+      class="btn btn-outline-secondary px-4 py-2"
+      (click)="goBack()">
+      Voltar
+    </button>
+
+    <app-confirm-modal (confirmed)="onConfirmed($event)"></app-confirm-modal>
+  </div>
+</div>
