Salvo partes envolvidas.

--- a/src/app/features/parties-involved/pages/new-parties-involed/new-parties-involed.component.html
+++ b/src/app/features/parties-involved/pages/new-parties-involed/new-parties-involed.component.html
@@ -17,7 +17,7 @@
         <select class="form-select" formControlName="tipoParteEnvolvida">
           <option value="">Selecione</option>
           <option value="AUTOR">AUTOR</option>
-          <option value="RÉU">RÉU</option>
+          <option value="REU">REU</option>
           <option value="ADVOGADO">ADVOGADO</option>
         </select>
       </div>
