--- a/src/app/features/process/pages/show-process/show-process.component.html
+++ b/src/app/features/process/pages/show-process/show-process.component.html
@@ -5,28 +5,36 @@
     Detalhes do Processo - Código {{ processo.id }}
   </h2>
 
-    <dt class="col-sm-3">Data Abertura </dt>
-    <dd class="col-sm-9">{{ processo.dataAbertura | date:'dd/MM/yyyy' }}</dd>
+  <dt class="col-sm-3">Data Abertura </dt>
+  <dd class="col-sm-9">{{ processo.dataAbertura | date:'dd/MM/yyyy' }}</dd>
 
-    <dt class="col-sm-3">Status</dt>
-    <dd class="col-sm-9">{{ processo.status }}</dd>
+  <dt class="col-sm-3">Status</dt>
+  <dd class="col-sm-9">{{ processo.status }}</dd>
 
-    <dt class="col-sm-3">Descrição</dt>
-    <dd class="col-sm-9">{{ processo.descricaoCaso }}</dd>
+  <dt class="col-sm-3">Descrição</dt>
+  <dd class="col-sm-9">{{ processo.descricaoCaso }}</dd>
 
-    <dt class="col-sm-3">Tipo Andamento Processual</dt>
-    <dd class="col-sm-9">{{ processo.andamentoProcessual.tipoAndamentoProcessual }}</dd>
+  <dt class="col-sm-3">Tipo Andamento Processual</dt>
+  <dd class="col-sm-9">{{ processo.andamentoProcessual.tipoAndamentoProcessual }}</dd>
 
-    <dt class="col-sm-3">Partes Envolvidas</dt>
-    <dd class="col-sm-9">
-      <ul class="list-group">
-        <li *ngFor="let parte of processo.partesEnvolvidas" class="list-group-item">
-          <strong>Código:</strong> {{ parte.id }}<br />
-          <strong>Nome:</strong> {{ parte.nomeCompleto }}<br />
-          <strong>Tipo:</strong> {{ parte.tipoParteEnvolvida }}
-        </li>
-      </ul>
-    </dd>
+  <dt class="col-sm-3">Partes Envolvidas</dt>
+  <dd class="col-sm-9">
+    <ul class="list-group">
+      <li *ngFor="let parte of processo.partesEnvolvidas" class="list-group-item">
+        <strong>Código:</strong> {{ parte.id }}<br />
+        <strong>Nome:</strong> {{ parte.nomeCompleto }}<br />
+        <strong>Tipo:</strong> {{ parte.tipoParteEnvolvida }}
+      </li>
+    </ul>
+  </dd>
+
+  <button
+    *ngIf="processo.status != 'ARQUIVADO'"
+    class="btn px-4 py-2"
+    style="background-color: #2b0033; color: white;"
+    (click)="arquivar()">
+    Arquivar processo
+  </button>
 
   <div class="d-flex gap-3 mt-4">
     <button
@@ -48,6 +56,6 @@
       Voltar
     </button>
 
-    <app-confirm-modal (confirmed)="onConfirmed($event)"></app-confirm-modal>
+    <app-confirm-modal (confirmed)="onConfirmedDeleted($event)"></app-confirm-modal>
   </div>
 </div>
