--- a/src/app/features/procedural-progress/pages/show-procedural-progress/show-procedural-progress.component.html
+++ b/src/app/features/procedural-progress/pages/show-procedural-progress/show-procedural-progress.component.html
@@ -29,7 +29,9 @@
     </button>
 
     <button
-      class="btn btn-outline-secondary px-4 py-2"
+      type="button"
+      class="btn px-4 py-2"
+      style="background-color: transparent; color: #2b0033; border: 2px solid #2b0033;"
       (click)="goBack()">
       Voltar
     </button>
