Adicionado modal para abrir filtro.

--- a/src/app/features/process/pages/index-process/index-process.component.html
+++ b/src/app/features/process/pages/index-process/index-process.component.html
@@ -60,3 +60,9 @@
     Nenhum processo cadastrado.
   </div>
 </div>
+
+<app-filter-modal
+  *ngIf="showFilterModal"
+  (applied)="onFilterApplied($event)"
+  (closed)="onFilterClosed()">
+</app-filter-modal>
